# basic

./: Makefile  README.md  basic.c  testsuite.sh
fs/: README.md  fs.c  fs.h  fs_test.c
targets/blaustahl/: CMakeLists.txt  blaustahl.c  blaustahl.h  fram.c
targets/ls10/: Makefile  fram.c  funconfig.h  ls10.c  ls10.h
targets/werkzeug/: CMakeLists.txt  werkzeug.c
